--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,13 @@
 {
-    "presets": [
-        "env",
-        "react",
-        "stage-2"
-    ]
+  "plugins": [
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }]
+  ],
+  "presets": [
+    "env",
+    "react",
+    "stage-2"
+  ]
 }
