--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "homepage": "https://github.com/ManuelPereira2016/reactive-form#readme",
   "dependencies": {
+    "await-to-js": "^2.0.1",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
@@ -38,9 +42,12 @@
     "react-dom": "^16.4.1",
     "react-flexbox-grid": "^2.1.2",
     "react-hot-loader": "^4.3.3",
+    "react-md-spinner": "^0.2.5",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
+    "redux-thunk": "^2.3.0",
+    "regenerator": "^0.13.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
