--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-flexbox-grid": "^2.1.2",
     "react-hot-loader": "^4.3.3",
