--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-dev": "webpack development",
     "start": "npm-run-all -p watch-css start-js",
     "start-js": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --env=jsdom --watch",
+    "coverage": "jest --env=jsdom --coverage"
   },
   "repository": {
     "type": "git",
@@ -54,5 +55,14 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
+  },
+  "devDependencies": {
+    "babel-jest": "^23.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^23.2.0",
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3"
   }
 }
