--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "moment": "^2.22.2",
     "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3",
+    "sinon": "^6.1.0",
     "wdio": "^2.0.2",
     "wdio-chromedriver-service": "^0.1.3",
     "wdio-jasmine-framework": "0.3.4",
