Updated to use hooks, implemented hooks from react-redux, improvements around working with function components

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reactive-form",
+  "name": "react-redux-hooks-node-demo",
   "version": "1.0.0",
-  "description": "A reactive basic form ready to submit made with react,redux and setup with webpack",
+  "description": "A sample form using react, redux, hooks and setup with webpack alongside an standalone server built using nodejs and mongodb",
   "main": "index.js",
   "scripts": {
     "watch-css": "npm run build-css && node-sass -w ./src/styles/styles.scss ./src/styles/styles.css",
@@ -20,64 +20,69 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ManuelPereira2016/reactive-form.git"
+    "url": "git+https://github.com/mpereiraesaa/react-redux-hooks-node-demo.git"
   },
   "author": "Manuel Pereira",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ManuelPereira2016/reactive-form/issues"
+    "url": "https://github.com/mpereiraesaa/react-redux-hooks-node-demo/issues"
   },
-  "homepage": "https://github.com/ManuelPereira2016/reactive-form#readme",
+  "homepage": "https://github.com/mpereiraesaa/react-redux-hooks-node-demo#readme",
   "dependencies": {
-    "await-to-js": "^2.0.1",
-    "axios": "^0.18.0",
+    "await-to-js": "^2.1.1",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.4.1",
+    "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.9.0",
     "react-flexbox-grid": "^2.1.2",
-    "react-hot-loader": "^4.3.3",
-    "react-md-spinner": "^0.2.5",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-devtools": "^3.4.1",
+    "react-hot-loader": "^4.12.14",
+    "react-md-spinner": "^1.0.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools": "^3.5.0",
     "redux-thunk": "^2.3.0",
-    "regenerator": "^0.13.2",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "regenerator": "^0.14.2",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   },
   "devDependencies": {
-    "babel-jest": "^23.2.0",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "^23.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "moment": "^2.22.2",
-    "react-test-renderer": "^16.4.1",
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "moment": "^2.24.0",
+    "react-test-renderer": "^16.9.0",
     "redux-mock-store": "^1.5.3",
-    "sinon": "^6.1.0",
-    "wdio": "^2.0.2",
-    "wdio-chromedriver-service": "^0.1.3",
-    "wdio-jasmine-framework": "0.3.4",
-    "wdio-selenium-standalone-service": "^0.0.10",
-    "webdriverio": "^4.13.1"
+    "regenerator-runtime": "^0.13.3",
+    "sinon": "^7.5.0",
+    "wdio": "^3.0.3",
+    "wdio-chromedriver-service": "^5.0.2",
+    "wdio-jasmine-framework": "0.3.8",
+    "wdio-selenium-standalone-service": "^0.0.12",
+    "webdriverio": "^5.13.2"
   }
 }
