--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,7 @@
 {
-  "plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": true
-    }]
-  ],
-  "presets": [
-    "env",
-    "react",
-    "stage-2"
-  ]
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+    ],
+    "plugins": ["@babel/transform-runtime"]
 }
